--- a/index.html
+++ b/index.html
@@ -92,7 +92,13 @@
     "react/": "https://esm.sh/react@^19.2.3/",
     "react": "https://esm.sh/react@^19.2.3",
     "vite": "https://esm.sh/vite@^7.2.7",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+    "express": "https://esm.sh/express@^5.2.1",
+    "nodemailer": "https://esm.sh/nodemailer@^7.0.11",
+    "mongoose": "https://esm.sh/mongoose@^9.0.1",
+    "bcrypt": "https://esm.sh/bcrypt@^6.0.0",
+    "dotenv": "https://esm.sh/dotenv@^17.2.3",
+    "cors": "https://esm.sh/cors@^2.8.5"
   }
 }
 </script>
