--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
     "mongoose": "https://esm.sh/mongoose@^9.0.1",
     "bcrypt": "https://esm.sh/bcrypt@^6.0.0",
     "dotenv": "https://esm.sh/dotenv@^17.2.3",
-    "cors": "https://esm.sh/cors@^2.8.5"
+    "cors": "https://esm.sh/cors@^2.8.5",
+    "jsonwebtoken": "https://esm.sh/jsonwebtoken@^9.0.3"
   }
 }
 </script>
