--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -81,25 +80,25 @@
         border: 1px solid rgba(255, 255, 255, 0.5);
       }
     </style>
-  <script type="importmap">
+<script type="importmap">
 {
   "imports": {
-    "@google/genai": "https://esm.sh/@google/genai@^1.33.0",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react-router-dom": "https://esm.sh/react-router-dom@^7.10.1",
-    "lucide-react": "https://esm.sh/lucide-react@^0.561.0",
-    "recharts": "https://esm.sh/recharts@^3.5.1",
+    "jsonwebtoken": "https://esm.sh/jsonwebtoken@^9.0.3",
     "react/": "https://esm.sh/react@^19.2.3/",
     "react": "https://esm.sh/react@^19.2.3",
-    "vite": "https://esm.sh/vite@^7.2.7",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+    "@google/genai": "https://esm.sh/@google/genai@^1.33.0",
+    "lucide-react": "https://esm.sh/lucide-react@^0.561.0",
+    "react-router-dom": "https://esm.sh/react-router-dom@^7.10.1",
+    "recharts": "https://esm.sh/recharts@^3.6.0",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "express": "https://esm.sh/express@^5.2.1",
-    "nodemailer": "https://esm.sh/nodemailer@^7.0.11",
-    "mongoose": "https://esm.sh/mongoose@^9.0.1",
-    "bcrypt": "https://esm.sh/bcrypt@^6.0.0",
-    "dotenv": "https://esm.sh/dotenv@^17.2.3",
     "cors": "https://esm.sh/cors@^2.8.5",
-    "jsonwebtoken": "https://esm.sh/jsonwebtoken@^9.0.3"
+    "vite": "https://esm.sh/vite@^7.3.0",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+    "bcrypt": "https://esm.sh/bcrypt@^6.0.0",
+    "mongoose": "https://esm.sh/mongoose@^9.0.1",
+    "nodemailer": "https://esm.sh/nodemailer@^7.0.11",
+    "dotenv": "https://esm.sh/dotenv@^17.2.3"
   }
 }
 </script>
