--- a/index.html
+++ b/index.html
@@ -83,22 +83,22 @@
 <script type="importmap">
 {
   "imports": {
+    "react": "https://esm.sh/react@^19.2.3",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "@google/genai": "https://esm.sh/@google/genai@^1.33.0",
+    "react-router-dom": "https://esm.sh/react-router-dom@^7.10.1",
     "lucide-react": "https://esm.sh/lucide-react@^0.561.0",
     "recharts": "https://esm.sh/recharts@^3.6.0",
     "vite": "https://esm.sh/vite@^7.3.0",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
     "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
-    "@google/genai": "https://esm.sh/@google/genai@^1.33.0",
-    "react-router-dom": "https://esm.sh/react-router-dom@^7.10.1",
     "mongoose": "https://esm.sh/mongoose@^9.0.1",
+    "bcrypt": "https://esm.sh/bcrypt@^6.0.0",
+    "nodemailer": "https://esm.sh/nodemailer@^7.0.11",
+    "jsonwebtoken": "https://esm.sh/jsonwebtoken@^9.0.3",
     "express": "https://esm.sh/express@^5.2.1",
     "dotenv": "https://esm.sh/dotenv@^17.2.3",
-    "cors": "https://esm.sh/cors@^2.8.5",
-    "bcrypt": "https://esm.sh/bcrypt@^6.0.0",
-    "jsonwebtoken": "https://esm.sh/jsonwebtoken@^9.0.3",
-    "nodemailer": "https://esm.sh/nodemailer@^7.0.11"
+    "cors": "https://esm.sh/cors@^2.8.5"
   }
 }
 </script>
